@@ -32,14 +32,15 @@ group = NoGroup
 #
 # Substitution Types:
 #
-# b - size         - bytes
-# d - duration     - seconds
-# k - size         - kilobytes
-# n - numerical    - integer or float
-# p - path         - virtual path
-# P - section path - section virtual path
-# s - speed        - kilobytes per second
-# t - time stamp   - seconds since epoch
-# z - string       - anything
+# b - size           - bytes
+# d - duration       - seconds
+# e - escaped string - substitute escape sequences (e.g. \002)
+# k - size           - kilobytes
+# n - numerical      - integer or float
+# p - path           - virtual path
+# P - section path   - section virtual path
+# s - speed          - kilobytes per second
+# t - time stamp     - seconds since epoch
+# z - string         - anything
 #
 [Variables]
