@@ -19,12 +19,12 @@ zipscript = COMPLETE HALFWAY INCOMPLETE NEWLEADER RACE SFV STATS WARN
 [Replace]
 
 [Variables]
-COMPLETE   = release:P message:z
-HALFWAY    = release:P message:z
-INCOMPLETE = release:P message:z
-NEWLEADER  = release:P message:z
-RACE       = release:P message:z
-SFV        = release:P message:z
-STATS      = release:P message:z
-UPDATE     = release:P message:z
-WARN       = release:P message:z
+COMPLETE   = release:P message:e
+HALFWAY    = release:P message:e
+INCOMPLETE = release:P message:e
+NEWLEADER  = release:P message:e
+RACE       = release:P message:e
+SFV        = release:P message:e
+STATS      = release:P message:e
+UPDATE     = release:P message:e
+WARN       = release:P message:e
