@@ -5,6 +5,7 @@ AlcoExt v0.5.0 (not released):
   NEW: Rewrote the command interface, proper support for aliases and flag checking.
   CHG: Removed the "cmdPrefix" option from [Module::Free].
   CHG: The option names in [Commands] are the base names of commands instead of a pattern.
+  FIX: Fixed ioZS support, the escape sequences are now properly substituted.
 
 AlcoExt v0.4.0 (Oct 7, 2005):
   NEW: Online stats module, to view bandwidth usage and user activity.
